--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Home - Smart Energy Meter</title>
+    <title>Smart Energy Meter</title>
     
     <!-- Structured Data / JSON-LD -->
     <script type="application/ld+json">
